[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
anyhow = "1.0.61"
thiserror = "1.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
env_logger = "0.9.0"
log = "0.4.0"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"