[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
anyhow = "1.0.61"
thiserror = "1.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
env_logger = "0.9.0"
log = "0.4.0"
sled = "0.34.7"
itertools = "0.10.3"
rayon = "1.5.3"
crossbeam = "0.8.2"

[dev-dependencies]
assert_cmd = "0.11"
criterion = { version = "0.3", features = ["html_reports"]}
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
crossbeam-utils = "0.6.5"


[[bench]]
name = "kvs"
harness = false